kubernetes/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-namespace
spec:
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
